tests/errors/syn.missing-ident.inferred-type-decl.or
main :: () -> void {
    add :: (a:!, b: int) -> int {
        return a + b;
    };
};
